src/ui/styles/style.css
:root {
    --red: #ed1c24;
    --green: #00a651;
    --blue: #567afc;
    --cyan: #00aeef;
    --yellow: #fff200;
    --orange: #ff9f00;
    --magenta: #ec008c;
    --black: #000000;
    --white: #ffffff;
    --gray-1: #e6e7e8;
    --gray-2: #d1d3d4;
    --gray-3: #bcbec0;
    --gray-4: #a7a9ac;
    --gray-5: #939598;
    --gray-6: #808285;
    --gray-7: #6d6e71;
    --gray-8: #58595b;
    --gray-9: #414042;
    --gray-10: #231f20;

    --stats-1: var(--black);
    --stats-2: var(--gray-10);
    --stats-3: var(--gray-9);
    --stats-4: var(--gray-8);

    --inline-padding: 2px 7px;
    --small-gap: 5px;
    --layout-gap: 10px;

    --base-font-size: 16px;
    --fjsc-base-font-size: var(--base-font-size);

    --default-font-family: "IBM Plex Mono", monospace;
    --fjsc-font: var(--default-font-family);

    --radius: 0px;

    --fjsc-text-color: var(--black);
    --fjsc-error-color: var(--red);
    --fjsc-interactive-background: var(--gray-1);
    --fjsc-interactive-background-hover: var(--gray-2);
    --fjsc-interactive-background-active: var(--gray-3);
    --fjsc-interactive-color: var(--black);
    --fjsc-interactive-color-active: var(--black);
    --fjsc-interactive-border: var(--gray-2);
    --fjsc-interactive-border-focused: var(--blue);
    --fjsc-interactive-border-active: var(--blue);
    --fjsc-border-radius-small: var(--radius);
    --fjsc-border-radius-medium: var(--radius);
    --fjsc-border-radius-large: var(--radius);
}

@media (prefers-color-scheme: dark) {
    :root {
        --red: #ed1c24;
        --green: #00a651;
        --blue: #2e3192;
        --cyan: #00aeef;
        --yellow: #fff200;
        --orange: #ff9f00;
        --magenta: #ec008c;
        --black: #ffffff;
        --white: #0e0d0e;
        --gray-1: #231f20;
        --gray-2: #414042;
        --gray-3: #58595b;
        --gray-4: #6d6e71;
        --gray-5: #808285;
        --gray-6: #939598;
        --gray-7: #a7a9ac;
        --gray-8: #bcbec0;
        --gray-9: #d1d3d4;
        --gray-10: #e6e7e8;
    }
}

.material-symbols-outlined {
    font-variation-settings: 'FILL' 1,
    'wght' 400,
    'GRAD' 0,
    'opsz' 24;
    font-family: 'Material Symbols Outlined';
    font-size: 1.1em !important;
    line-height: 1.2;
}

a {
    color: inherit;
    text-decoration: none;
    font-size: inherit;
}

.underline {
    text-decoration: underline;
}

.link-container {
    width: max-content;
    cursor: pointer;
}

.link-container:hover {
    transform: scale(1.1);
    background: var(--yellow);
}

a.button {
    padding: var(--inline-padding);
    border-radius: var(--radius);
    background: var(--gray-1);
    max-width: max-content;
    height: max-content;
}

a.button:hover {
    background: var(--gray-2);
    color: var(--black);
}

.flex, .flex-v {
    display: flex;
    gap: var(--layout-gap);
    flex-wrap: wrap;
}

.flex-v {
    flex-direction: column;
}

html, body {
    margin: 0;
    padding: 0;
    height: 100dvh;
    width: 100dvw;
}

body {
    background: var(--gray-1);
    color: var(--black);
    font-family: var(--default-font-family);
    font-size: 16px;
    line-height: 1.5;
    margin: 0;
    padding: 0;
}

#content {
    height: 100%;
}

.hidden {
    display: none;
}

p, h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 0;
    font-weight: normal;
}

h1 {
    font-size: 2rem;
}

h2 {
    font-size: 1.5rem;
}

h3, h4, h5, h6 {
    font-size: 1rem;
}

b {
    font-weight: bold;
}

#notifications {
    position: absolute;
    right: 50%;
    transform: translateX(50%);
    top: 15px;
    width: max-content;
    z-index: 99998;
    max-height: 100dvh;
}

#modals:before {
    content: "";
    position: absolute;
    background: black;
    opacity: .7;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 4;
}

#modals:empty:before {
    display: none;
}

.modal {
    position: absolute;
    border: 1px solid var(--black);
    box-shadow: 0 0 20dvw 0 black;
    border-radius: calc(var(--radius) * 2);
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 5;
    max-height: calc(100% - 100px);
    overflow: auto;
    max-width: 80dvw;
    width: max-content;
}

.notification {
    font-weight: bold;
}

.notification.error {
    color: var(--red);
}

.notification.success {
    color: var(--green);
}

.notification.warning {
    color: var(--orange);
}

.container {
    padding: var(--layout-gap);
    box-sizing: border-box;
    background: var(--white);
}

.border {
    border: 1px solid var(--black);
}

.layer-1 {
    background: var(--white);
}

.layer-2 {
    background: var(--gray-1);
}

.layer-3 {
    background: var(--gray-2);
}

.center-items {
    align-items: center;
}

.split-flex {
    justify-content: space-between;
}

button.positive, .button.positive {
    background: var(--green);
    --fjsc-text-color: var(--white);
}

button.positive:hover, .button.positive:hover {
    --fjsc-text-color: var(--black);
}

button.negative, .button.negative {
    background: var(--red);
}

button.active, .button.active {
    background: var(--blue);
}

.header-logo {
    --size: 2rem;
    width: var(--size);
    height: var(--size);
}

.loading {
    border-radius: 999px;
    width: 1em;
    height: 1em;
    animation: pulsating-shadow 1s ease-in-out infinite;
    background: var(--gray-3);
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
}

@keyframes pulsating-shadow {
    0% {
        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
    }
    100% {
        box-shadow: 0 0 0 1em rgba(0, 0, 0, 0);
    }
}

hr {
    background: var(--gray-5);
    border: none;
    height: 1px;
    margin: var(--layout-gap) 3px;
}

.table-wrapper.scroll-table {
    max-height: 75dvh;
    overflow: auto;
}

thead tr th {
    position: sticky;
    top: 0;
    z-index: 1;
}

table {
    border-collapse: collapse;
    width: 100%;
}

th {
    background: var(--black);
    color: var(--white);
}

th, td {
    text-align: left;
    position: relative;
    box-sizing: border-box;
    border-top: 1px solid transparent;
}

tr:hover td {
    border-top: 1px solid var(--black);
    border-bottom: 1px solid var(--black);
}

tr:hover td:first-child {
    border-left: 1px solid var(--black);
}

tr:hover td:last-child {
    border-right: 1px solid var(--black);
}

tr:nth-child(even) {
    background: var(--gray-2);
}

tr:nth-child(odd) {
    background: var(--gray-1);
}

.privateText {
    cursor: pointer;
}

button.fjsc {
    align-items: center;
    display: flex;
    gap: var(--layout-gap);
}

.statistic {
    width: min(100%, 600px);
    border: 1px solid var(--gray-5);
    padding: var(--layout-gap);
}

.question-cursor {
    cursor: help;
}

.status-tr.requested {
    --status-color: var(--blue);
}

.status-tr.processing {
    --status-color: var(--cyan);
}

.status-tr.paid {
    --status-color: var(--green);
}

.status-tr.failed {
    --status-color: var(--red);
}

.status-tr .status {
    background: var(--status-color);
    border-radius: 999px;
    padding: var(--inline-padding);
    font-size: .8rem;
}

.clickable-icon {
    cursor: pointer;
    border-radius: 999px;
    padding: var(--small-gap);
    width: 1.5em;
    height: 1.5em;
    display: flex;
    align-items: center;
    justify-content: center;
    color: inherit !important;
}

.clickable-icon:hover {
    background: rgba(100, 100, 100, .5);
}

.service-link {
    border-radius: 999px;
    padding: 2px 2px 2px 20px;
    background: var(--service-link-color);
    --service-link-color: var(--gray-1);
}

.service-link.spotify {
    --service-link-color: #1db954;
    color: black;
}

.service-link.youtube {
    --service-link-color: #ff0000;
}

.service-link.soundcloud {
    --service-link-color: #ff8800;
}

.service-link.applemusic {
    --service-link-color: #000000;
}

.service-link.bandcamp {
    --service-link-color: #00a1e0;
}

.service-link.lyda {
    --service-link-color: #70c926;
}

.flex-grow {
    flex-grow: 1;
}

.artist-logo {
    background: black;
    border-radius: 999px;
    padding: var(--layout-gap);
    box-sizing: border-box;
}

